# nuxt-manga

./: .gitignore  test.py
server/: .env.example  \  alembic.ini  config.py  index.html  main.py  migrate.py  pyproject.toml  testdb.db
server/api/: __init__.py  auth.py  needed.py  person.py  title.py  user.py
server/auth/: auth.py
server/config/: assets.py  db.py  logger.py
server/database/: __init__.py  session.py
server/database/tables/: __init__.py  comment.py  needed.py  notification.py  page.py  person.py  rate.py  stuff.py  title.py  user.py
server/db/: session_fabric.py
server/db/migrations/: env.py
server/db/seeders/: __init__.py  genres.py  tags.py
server/etc/: constant_data.py  funcs.py  role.py  static.py
server/models/: __init__.py  tags.py
server/models/assets/: __init__.py  person.py  title.py  translate.py  user.py
server/models/comment/: __init__.py  carma.py  comment.py
server/models/notification/: __init__.py  globalnotify.py  notification.py
server/models/page/: __init__.py  asset.py  page.py
server/models/person/: __init__.py  person.py  personmeta.py
server/models/report/: report.py
server/models/title/: __init__.py  list.py  (+6 more)
server/modules/: asset.py  auth.py
server/routes/: __init__.py  asset.py  auth.py  pages.py  search.py  tags.py  title.py  translate.py
server/schemas/: auth.py  catalog.py  comment.py  page.py  person.py  rate.py  tag.py  title.py  translate.py  user.py
server/services/: asset.py
server/typealias/: asset.py  notification.py  report.py  title.py
server/utils/: assets.py  log_wrappers.py
(+210 files in other folders)
