[tool.poetry]
name = "manga-server"
version = "0.0.1"
description = ""
authors = ["prepodobnuy <zvfvbycsy6@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.36"
poetry = "^2.0.0"
fastapi = "^0.115.6"
fastapi-users = "^14.0.1"
sqlalchemy-utils = "^0.41.2"
uvicorn = "^0.34.0"
python-jose = "^3.3.0"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
